--- a/learn_git.html
+++ b/learn_git.html
@@ -1,2 +1,9 @@
-中科软科技以“发展软件产业，创新软件科技”为己任，秉承踏实严谨的工作作风，扎根本土，放眼世界，携手合作伙伴共创未来，不断丰富企业文化，
-继续树立良好的企业社会形象，力争成为业内公认的以行业应用软件为特色的高技术软件企业标兵。
+<!DOCTYPE html>
+<html>
+<head>
+<title>learn git</title>
+</head>
+<body>
+<h1>HELLO GIT</h1>
+</body>
+</html>
